auth context i frontend, design, logik ændring. primært frontend auth
